# github-test

./: CMakeLists.txt
input/: input.cpp  input.h
output/: output.cpp  output.h
src/: main.cpp
